# aws-parameters-and-secrets-lambda

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  deny.toml  rust-toolchain.toml
.devcontainer/: dev-setup.sh  devcontainer.json
.github/workflows/: publish.yml  test.yml
src/: lib.rs
