[package]
name = "aws-parameters-and-secrets-lambda"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1"
openssl = { version = "0.10.45", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
sealed = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1"

[dev-dependencies]
httpmock = "0.6"
maplit = "1"
temp-env = "0.3"
tokio = { version = "1.23.0", features = ["macros"] }
