[package]
name = "aws-parameters-and-secrets-lambda"
description = "Cache AWS Secrets Manager secrets in your AWS Lambda function"
version = "0.1.0"
authors = ["Tom Humphreys <Tom01098Code@gmail.com>"]

homepage = "https://docs.rs/aws-parameters-and-secrets-lambda/"
repository = "https://github.com/Tom01098/aws-parameters-and-secrets-lambda"
readme = true

edition = "2021"
license = "Apache-2.0 OR MIT"

categories = ["asynchronous", "caching"]
keywords = ["aws", "secrets", "lambda"]

[dependencies]
anyhow = "1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
sealed = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1"

[dev-dependencies]
httpmock = "0.6"
maplit = "1"
temp-env = "0.3"
tokio = { version = "1.23.0", features = ["macros"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-musl"
targets = []
